--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -581,7 +581,7 @@ textarea {
 	            </div>
 	        </div>
         </div>
-	    <div class="col-md-7">
+	    <div class="col-md-6 col-md-offset-1">
 	        <div class="row">
 	            <div class="col-md-6">
                     <p>Scottish Candidate Number (SCN)</p>
