--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -375,26 +375,6 @@ textarea {
 	    <div class="col-md-5">
 	        <div class="row">
 	            <div class="col-md-4">
-                    <p>Email address *</p>
-	            </div>
-	            <div class="col-md-8">
-            		<p><input class="form-control" type="text" name="email" data-type="email" data-required="true" data-trigger="keyup focusout"></p>
-	            </div>
-	        </div>
-        </div>
-	    <div class="col-md-7">
-	        <div class="row">
-	            <div class="col-md-12">
-	                <p>We recommend using blah... etc email info to go here</p>
-	            </div>
-	        </div>
-        </div>
-	</div>
-
-	<div class="row">
-	    <div class="col-md-5">
-	        <div class="row">
-	            <div class="col-md-4">
                     <p>First name *</p>
 	            </div>
 	            <div class="col-md-8">
@@ -498,16 +478,26 @@ textarea {
     </div>
 
 	<div class="row">
-	    <div class="col-md-5">
+	    <div class="col-md-6">
 	        <div class="row">
-	            <div class="col-md-4">
+	            <div class="col-md-3">
                     <p>Post code</p>
 	            </div>
-	            <div class="col-md-8">
+	            <div class="col-md-7">
             		<p><input class="form-control checkpostcode" type="text" name="post_code" id="post_code" data-required="true"></p>
             		<p class="postcodewarning" style="color:red;font-size:0.8em;margin-bottom:10px;display:none;">Please enter a valid UK post code</p>
 	            </div>
 	        </div>
+        </div>
+	    <div class="col-md-6">
+	        <div class="row">
+	            <div class="col-md-3 col-md-offset-2">
+                    <p>Email address *</p>
+	            </div>
+	            <div class="col-md-7">
+            		<p><input class="form-control" type="text" name="email" data-type="email" data-required="true" data-trigger="keyup focusout"></p>
+	            </div>
+            </div>
         </div>
     </div>
 
