--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -79,8 +79,8 @@ jQuery(document).ready(function() {
     $('.checkmobile').bind('change',mobileformat);
 
     $('.select2this').select2({width:'100%'});
-    $('.select2thisRequired').siblings('.select2-container').find('.select2-selection').each(function() { $(this).css({'background-color':'#F2DEDE'}) });
-    $('.select2thisRequired').on('select2:select', function() { $('.select2thisRequired').siblings('.select2-container').find('.select2-selection').each(function() { $(this).css({'background-color':'#DFF0D8'}) }); });
+    //$('.select2thisRequired').siblings('.select2-container').find('.select2-selection').each(function() { $(this).css({'background-color':'#F2DEDE'}) });
+    //$('.select2thisRequired').on('select2:select', function() { $('.select2thisRequired').siblings('.select2-container').find('.select2-selection').each(function() { $(this).css({'background-color':'#DFF0D8'}) }); });
 
     // hide survey sections and add prev/next nav-throughs
     /*var doprevnext = function(event) {
@@ -532,7 +532,7 @@ textarea {
                     <p>School *</p>
 	            </div>
 	            <div class="col-md-7">
-            		<p><select class="select2this select2thisRequired" name="school" data-required="true">
+            		<p><select class="form-control select2this select2thisRequired" name="school" data-required="true">
             		    <option></option>
             		    {% for opt in selections.schools %}
             		        <option>{{ opt }}</option>
