--- a/portality/static/css/leaps.css
+++ b/portality/static/css/leaps.css
@@ -35,7 +35,7 @@ ul.parsley-error-list li {
 
 
 body {
-	font:14px Arial, Helvetica, sans-serif; 
+	/*font:14px Arial, Helvetica, sans-serif; */
 	color:#0c2335; 
 	background: #ffffff; /*#0c2335; */
 	padding:0;
