--- a/portality/templates/footer.html
+++ b/portality/templates/footer.html
@@ -1,6 +1,6 @@
   <footer>
 	  <div class="row-fluid">
-	    <div class="span3" id="footer_logo">
+	    <div class="span3 hidden-xs hidden-sm" id="footer_logo">
 	  		<img src="/static/leaps_logo_cropped.png" alt="Lothians Equal Access Programme for Schools Logo" title="Lothians Equal Access Programme for Schools Logo">
 	    </div>
 	
