--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -159,8 +159,8 @@ jQuery(document).ready(function() {
                 } else {
                     $(p).hide();
                 }
-            });
-            $(this).closest('.row').append('<hr class="visible-xs visible-sm" style="border-color:#bbb;"></hr>');*/
+            });*/
+            $(this).closest('.row').append('<hr class="visible-xs visible-sm" style="border-color:#bbb;"></hr>');
             preprow(row);
             $(row).insertAfter($(this).closest('.row'));
             $(this).closest('.row').find('.add-row').parent().hide();
