--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -271,9 +271,9 @@ jQuery(document).ready(function() {
 </script>
 
 <style>
-body {
+/*body {
     font-size:1.2em;
-}
+}*/
 hr {
     border-color:#333;
 }
