--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -274,15 +274,14 @@ jQuery(document).ready(function() {
 /*body {
     font-size:1.2em;
 }*/
+#container {
+    width: none;
+}
 hr {
     border-color:#333;
 }
 h2 {
     margin-top: 0px;
-}
-.content {
-    margin:0;
-    width:100%;
 }
 .part .well{
     margin-top:50px;
