--- a/portality/templates/account/login.html
+++ b/portality/templates/account/login.html
@@ -2,6 +2,10 @@
 
 {% block content %}
 
+<div id="logo">
+	<img src="/static/leaps_banner.png" alt="A group of students from the Lothians Equal Access Programme for Schools" title="A group of students from the Lothians Equal Access Programme for Schools" />
+</div>
+
 <div class="row-fluid">
     <div class="span4">
         &nbsp;
