--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -370,21 +370,21 @@ textarea {
 	<div class="row">
 	    <div class="col-sm-6">
 	        <div class="row">
-	            <div class="col-sm-3">
+	            <div class="col-sm-3 hidden-xs">
                     <p>First name *</p>
 	            </div>
 	            <div class="col-sm-7">
-            		<p><input class="form-control" type="text" name="first_name" data-required="true"></p>
+            		<p><input class="form-control" type="text" name="first_name" data-required="true" placeholder="First name"></p>
 	            </div>
 	        </div>
         </div>
 	    <div class="col-sm-6">		
 	        <div class="row">
-	            <div class="col-sm-3 col-sm-offset-2">
+	            <div class="col-sm-3 col-sm-offset-2 hidden-xs">
                     <p>Last name *</p>
 	            </div>
 	            <div class="col-sm-7">
-            		<p><input class="form-control" type="text" name="last_name" data-required="true"></p>
+            		<p><input class="form-control" type="text" name="last_name" data-required="true" placeholder="Last name"></p>
 	            </div>
 	        </div>
         </div>
