--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -313,10 +313,6 @@ textarea {
 .btn-warning {
     color:#333;
 }
-
-.grey:selected {
-    color: #ccc;
-}
 </style>
 
 <div id="logo">
@@ -414,7 +410,7 @@ textarea {
 	            <div class="col-sm-7">
             		<p>
             		    <select class="form-control" id="gender" name="gender" data-required="true">
-            		    <option value="" class="grey">select Gender *</option>
+            		    <option value="" disabled="disabled">select Gender *</option>
             		    <option value="Male">Man / Male (including trans man)</option>
             		    <option value="Female">Woman / Female (including trans woman)</option>
             		    <option value="Other">In another way</option>
