--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -313,13 +313,6 @@ textarea {
 .btn-warning {
     color:#333;
 }
-
-.grey:disabled {
-    color: #ccc;
-}
-.grey:selected {
-    color: #ccc;
-}
 </style>
 
 <div id="logo">
@@ -416,8 +409,8 @@ textarea {
 	            </div>
 	            <div class="col-sm-7">
             		<p>
-            		    <select class="form-control" id="gender" name="gender" data-required="true">
-            		    <option value="" disabled="disabled" selected="selected" class="grey">select Gender *</option>
+            		    <select class="form-control" id="gender" name="gender" data-required="true" style="color: #ccc;">
+            		    <option value="" disabled="disabled" selected="selected">select Gender *</option>
             		    <option value="Male">Man / Male (including trans man)</option>
             		    <option value="Female">Woman / Female (including trans woman)</option>
             		    <option value="Other">In another way</option>
