--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -267,6 +267,8 @@ jQuery(document).ready(function() {
 	   $('#show_gender_other').hide();
 	   if ( $('#gender').val() == 'Other' ) $('#show_gender_other').show();
 	});
+	
+	$('select').bind('change' function() { $(this).css({color: '#555'}); })
 });
 </script>
 
@@ -409,7 +411,7 @@ textarea {
 	            </div>
 	            <div class="col-sm-7">
             		<p>
-            		    <select class="form-control" id="gender" name="gender" data-required="true" style="color: #ccc;">
+            		    <select class="form-control" id="gender" name="gender" data-required="true" style="color: #bbb;">
             		    <option value="" disabled="disabled" selected="selected">select Gender *</option>
             		    <option value="Male">Man / Male (including trans man)</option>
             		    <option value="Female">Woman / Female (including trans woman)</option>
