--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -303,6 +303,9 @@ textarea {
     color:#666;
     font-size:1.1em;
 }
+.select2-selection__rendered {
+    color: #999;
+}
 .btn {
     color:#333;
 }
