--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -304,7 +304,7 @@ textarea {
     font-size:1.1em;
 }
 .select2-selection__rendered {
-    color: #999;
+    color: #999 !important;
 }
 .btn {
     color:#333;
