--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -268,7 +268,7 @@ jQuery(document).ready(function() {
 	   if ( $('#gender').val() == 'Other' ) $('#show_gender_other').show();
 	});
 	
-	$('select').bind('change', function() { $(this).css({color: '#555'}); })
+	$('select').bind('change', function() { $(this).removeClass('pregrey'); $(this).css({color: '#555'}); })
 });
 </script>
 
@@ -303,7 +303,7 @@ textarea {
     color:#666;
     font-size:1.1em;
 }
-.select2-selection__rendered {
+.pregrey .select2-selection__rendered {
     color: #999 !important;
 }
 .btn {
@@ -533,7 +533,7 @@ textarea {
                     <p>School *</p>
 	            </div>
 	            <div class="col-sm-7">
-            		<p><select class="form-control select2this select2thisRequired" name="school" data-required="true" style="color: #999;">
+            		<p><select class="form-control select2this select2thisRequired pregrey" name="school" data-required="true" style="color: #999;">
             		    <option value="" disabled="disabled" selected="selected">select School *</option>
             		    {% for opt in selections.schools %}
             		        <option>{{ opt }}</option>
