--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -303,7 +303,7 @@ textarea {
     color:#666;
     font-size:1.1em;
 }
-p.pregrey > span > span > span.select2-selection__rendered {
+p.pregrey > span > span > span > span.select2-selection__rendered {
     color: #999 !important;
 }
 .btn {
