--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -79,25 +79,6 @@ jQuery(document).ready(function() {
     $('.checkmobile').bind('change',mobileformat);
 
     $('.select2this').select2({width:'100%'});
-    //$('.select2thisRequired').siblings('.select2-container').find('.select2-selection').each(function() { $(this).css({'background-color':'#F2DEDE'}) });
-    //$('.select2thisRequired').on('select2:select', function() { $('.select2thisRequired').siblings('.select2-container').find('.select2-selection').each(function() { $(this).css({'background-color':'#DFF0D8'}) }); });
-
-    // hide survey sections and add prev/next nav-throughs
-    /*var doprevnext = function(event) {
-        event.preventDefault();
-        $('#survey').parsley('validate');
-        $('.part').hide();
-        $(this).hasClass('prev') ? $(this).closest('.part').prev().show() : $(this).closest('.part').next().show();
-        window.scrollTo(0,0);
-    }*/
-    //var prevnext = '<div style="margin:20px 0 20px 0;"><button class="btn btn-info prev">previous</button> <button class="btn btn-info next">next</button></div>';
-    //$('.part').append(prevnext);
-    //$('.part:first').find('.prev').remove();
-    //$('.part:last').find('.next').remove();
-    //$('.prev').bind('click',doprevnext);
-    //$('.next').bind('click',doprevnext);
-    //$('.part').hide();
-    //$('.part:first').show();
     //$('#survey').parsley('validate'); // validate to show warnings at start
 
     // review button show all
@@ -533,7 +514,7 @@ p.pregrey > span > span > span > span.select2-selection__rendered {
                     <p>School *</p>
 	            </div>
 	            <div class="col-sm-7">
-            		<p class="pregrey"><select class="form-control select2this select2thisRequired" name="school" data-required="true" style="color: #999;">
+            		<p class="pregrey"><select class="form-control select2this" name="school" data-required="true" style="color: #999;">
             		    <option value="" disabled="disabled" selected="selected">select School *</option>
             		    {% for opt in selections.schools %}
             		        <option>{{ opt }}</option>
@@ -619,7 +600,7 @@ p.pregrey > span > span > span > span.select2-selection__rendered {
         	</div>
     	    <div class="col-sm-3">
                 <p>Subject</p>
-        		<p><select name="qualification_subject" class="select2this">
+        		<p class="pregrey"><select name="qualification_subject" class="select2this" style="color: #999;">
         		    <option value="" disabled="disabled" selected="selected">select Subject</option>
         		    {% for opt in selections.subjects %}
         		        <option>{{ opt }}</option>
@@ -628,7 +609,7 @@ p.pregrey > span > span > span > span.select2-selection__rendered {
         	</div>
     	    <div class="col-sm-3">
                 <p>Level of qualification</p>
-        		<p><select name="qualification_level" class="select2this">
+        		<p class="pregrey"><select name="qualification_level" class="select2this" style="color: #999;">
         		    <option value="" disabled="disabled" selected="selected">select Level of qualification</option>
         		    {% for opt in selections.levels %}
         		        <option>{{ opt }}</option>
@@ -637,7 +618,7 @@ p.pregrey > span > span > span > span.select2-selection__rendered {
         	</div>
     	    <div class="col-sm-2">
                 <p>Grade</p>
-        		<p><select name="qualification_grade" class="select2this">
+        		<p class="pregrey"><select name="qualification_grade" class="select2this" style="color: #999;">
         		    <option value="" disabled="disabled" selected="selected">select Grade</option>
         		    {% for opt in selections.grades %}
         		        <option>{{ opt }}</option>
@@ -649,96 +630,6 @@ p.pregrey > span > span > span > span.select2-selection__rendered {
     	</div>
 	</div>
 
-    <!--
-    <hr></hr>
-
-    <div>
-        <h3>Fifth year qualifications</h3>
-    
-    	<div class="row multi manyrows">
-    	    <div class="col-sm-3">
-                <p>Subject</p>
-        		<p><select name="qualification_subject" class="select2this">
-        		    <option></option>
-        		    {% for opt in selections.subjects %}
-        		        <option>{{ opt }}</option>
-        		    {% endfor %}
-        		</select></p>
-        	</div>
-        	<div class="col-sm-2">
-                <p>School year taken</p>
-        		<p><select name="qualification_year" class="form-control">
-        		    <option>Fifth year</option>
-        		</select></p>
-        	</div>
-        	<div class="col-sm-3">
-                <p>Level of qualification</p>
-        		<td><select name="qualification_level" class="select2this">
-        		    <option></option>
-        		    {% for opt in selections.levels %}
-        		        <option>{{ opt }}</option>
-        		    {% endfor %}
-        		</select></td>
-        	</div>
-        	<div class="col-sm-2">
-                <p>Grade</p>
-        		<p><select name="qualification_grade" class="select2this">
-        		    <option></option>
-        		    {% for opt in selections.grades %}
-        		        <option>{{ opt }}</option>
-        		    {% endfor %}
-        		</select></p>
-        	</div>
-        	<div class="col-sm-2">
-    	    </div>
-    	</div>
-    </div>
-    
-    <hr></hr>
-
-    <div>
-        <h3>Sixth year / other qualifications</h3>
-    
-    	<div class="row multi manyrows">
-    	    <div class="col-sm-3">
-                <p>Subject</p>
-        		<p><select name="qualification_subject" class="select2this">
-        		    <option></option>
-        		    {% for opt in selections.subjects %}
-        		        <option>{{ opt }}</option>
-        		    {% endfor %}
-        		</select></p>
-            </div>
-    	    <div class="col-sm-2">
-                <p>School year taken</p>
-        		<p><select name="qualification_year" class="form-control">
-        		    <option>Sixth year</option>
-        		    <option>Other</option>
-        		</select></p>
-            </div>
-    	    <div class="col-sm-3">
-                <p>Level of qualification</p>
-        		<p><select name="qualification_level" class="select2this">
-        		    <option></option>
-        		    {% for opt in selections.levels %}
-        		        <option>{{ opt }}</option>
-        		    {% endfor %}
-        		</select></p>
-            </div>
-    	    <div class="col-sm-2">
-                <p>Grade</p>
-        		<p><select name="qualification_grade" class="select2this">
-        		    <option></option>
-        		    {% for opt in selections.grades %}
-        		        <option>{{ opt }}</option>
-        		    {% endfor %}
-        		</select></p>
-            </div>
-    	    <div class="col-sm-2">
-    	    </div>
-    	</div>
-    </div>
-    -->
 </div>
 
 
@@ -766,7 +657,7 @@ p.pregrey > span > span > span > span.select2-selection__rendered {
 	<div class="row multi">
 	    <div class="col-sm-4">
             <p>College / University</p>
-    		<p><select class="institutionselector select2this" name="application_institution">
+    		<p class="pregrey"><select class="institutionselector select2this" name="application_institution" style="color: #999;">
     		    <option value="" disabled="disabled" selected="selected">select College / University</option>
     		    {% for opt in selections.institutions %}
     		        <option>{{ opt }}</option>
@@ -775,7 +666,7 @@ p.pregrey > span > span > span > span.select2-selection__rendered {
     	</div>
 	    <div class="col-sm-4">
             <p>Subject</p>
-    		<p><select class="subjectselector select2this" name="application_subject">
+    		<p class="pregrey"><select class="subjectselector select2this" name="application_subject" style="color: #999;">
     		    <option value="" disabled="disabled" selected="selected">select Subject</option>
     		    {% for opt in selections.advancedsubjects %}
     		        <option>{{ opt }}</option>
@@ -784,7 +675,7 @@ p.pregrey > span > span > span > span.select2-selection__rendered {
     	</div>
 	    <div class="col-sm-2">
             <p>Level of study</p>
-    		<p><select class="levelselector select2this" name="application_level">
+    		<p class="pregrey"><select class="levelselector select2this" name="application_level" style="color: #999;">
     		    <option value="" disabled="disabled" selected="selected">select Level of study</option>
     		    {% for opt in selections.advancedlevels %}
     		        <option>{{ opt }}</option>
